[gd_scene load_steps=19 format=2]

[ext_resource path="res://lobby.gd" type="Script" id=1]
[ext_resource path="res://shipoption.gd" type="Script" id=2]
[ext_resource path="res://assets/NasaTextTitle.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/vcr.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://assets/nasalization-rg.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://assets/VCR_Big.tres" type="DynamicFont" id=6]
[ext_resource path="res://assets/VCR_Small.tres" type="DynamicFont" id=7]
[ext_resource path="res://assets/square.png" type="Texture" id=8]
[ext_resource path="res://scenes/gear_button.tscn" type="PackedScene" id=9]
[ext_resource path="res://assets/info.png" type="Texture" id=10]
[ext_resource path="res://assets/lobby_of_the_gods.ogg" type="AudioStream" id=11]
[ext_resource path="res://scenes/info_pane.tscn" type="PackedScene" id=12]
[ext_resource path="res://assets/20140221_ngc6992_poss2_czernetz.png" type="Texture" id=13]
[ext_resource path="res://stars_trans.png" type="Texture" id=14]
[ext_resource path="res://scenes/settings_pane.tscn" type="PackedScene" id=16]
[ext_resource path="res://script/music_player.gd" type="Script" id=17]

[sub_resource type="DynamicFont" id=1]
size = 37
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 200
font_data = ExtResource( 5 )

[node name="lobby" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.58209
margin_top = -1.55499
margin_right = 2.58203
margin_bottom = -1.55493
mouse_filter = 2
size_flags_horizontal = 2
size_flags_vertical = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
self_modulate = Color( 1, 1, 1, 0.509804 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 13 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect2" type="TextureRect" parent="."]
self_modulate = Color( 1, 1, 1, 0.509804 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -821.575
margin_top = -629.0
margin_right = 826.425
margin_bottom = 630.0
texture = ExtResource( 14 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="."]
anchor_left = 0.047
anchor_top = 0.04
anchor_right = 0.047
anchor_bottom = 0.04
margin_left = 1.93438
margin_top = 0.200005
margin_right = 1211.93
margin_bottom = 237.2
rect_clip_content = false
mouse_filter = 2
custom_fonts/normal_font = ExtResource( 3 )
custom_colors/default_color = Color( 1, 0.678431, 0, 1 )
text = "Apogee"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="RichTextLabel"]
margin_left = 180.182
margin_top = 33.2985
margin_right = 576.182
margin_bottom = 66.2985
rect_scale = Vector2( 0.690133, 0.690133 )
custom_fonts/font = ExtResource( 7 )
text = "Skurfsoft Presents"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="RichTextLabel"]
margin_left = 591.0
margin_top = 202.0
margin_right = 723.0
margin_bottom = 235.0
rect_scale = Vector2( 1.66515, 1.66515 )
custom_fonts/font = SubResource( 1 )
text = "MOBILE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel2" type="RichTextLabel" parent="."]
visible = false
anchor_left = 0.047
anchor_top = 0.06
anchor_right = 0.047
anchor_bottom = 0.06
margin_left = -0.239998
margin_top = 0.200005
margin_right = 1423.76
margin_bottom = 237.2
rect_clip_content = false
custom_fonts/normal_font = SubResource( 2 )
custom_colors/default_color = Color( 1, 0.678431, 0, 1 )
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="connect" type="ColorRect" parent="."]
anchor_left = 0.976
anchor_top = 0.353
anchor_right = 0.976
anchor_bottom = 0.66
margin_left = -881.0
margin_top = -255.5
margin_bottom = 255.5
color = Color( 0.470588, 0.470588, 0.470588, 0.223529 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="connect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = -5.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="name_label" type="Label" parent="connect/VBoxContainer"]
margin_right = 871.0
margin_bottom = 33.0
size_flags_horizontal = 3
size_flags_vertical = 0
custom_fonts/font = ExtResource( 7 )
text = "Name:"

[node name="name" type="LineEdit" parent="connect/VBoxContainer"]
margin_top = 37.0
margin_right = 871.0
margin_bottom = 80.0
size_flags_horizontal = 3
size_flags_vertical = 2
custom_fonts/font = ExtResource( 7 )
text = "SS Journeyman"

[node name="ip_label" type="Label" parent="connect/VBoxContainer"]
margin_top = 203.0
margin_right = 871.0
margin_bottom = 236.0
size_flags_horizontal = 3
size_flags_vertical = 0
custom_fonts/font = ExtResource( 7 )
text = "IP:"

[node name="ip" type="LineEdit" parent="connect/VBoxContainer"]
margin_top = 240.0
margin_right = 871.0
margin_bottom = 283.0
size_flags_horizontal = 3
size_flags_vertical = 2
custom_fonts/font = ExtResource( 7 )
text = "127.0.0.1"

[node name="ip_label2" type="Label" parent="connect/VBoxContainer"]
margin_top = 406.0
margin_right = 871.0
margin_bottom = 439.0
size_flags_horizontal = 3
size_flags_vertical = 0
custom_fonts/font = ExtResource( 7 )
text = "Ship Type:"

[node name="OptionButton" type="OptionButton" parent="connect/VBoxContainer"]
margin_top = 443.0
margin_right = 871.0
margin_bottom = 482.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 7 )
script = ExtResource( 2 )

[node name="error_label" type="Label" parent="connect/VBoxContainer"]
margin_top = 486.0
margin_right = 871.0
margin_bottom = 500.0
size_flags_horizontal = 3
size_flags_vertical = 0
custom_colors/font_color = Color( 0.820312, 0.291595, 0.291595, 1 )
align = 1

[node name="host" type="TextureButton" parent="connect/VBoxContainer"]
self_modulate = Color( 1, 0.631373, 0, 0.243137 )
margin_top = 504.0
margin_right = 871.0
margin_bottom = 666.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 8 )
expand = true

[node name="Label" type="Label" parent="connect/VBoxContainer/host"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 6 )
text = "Host"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="join" type="TextureButton" parent="connect/VBoxContainer"]
self_modulate = Color( 1, 0.631373, 0, 0.243137 )
margin_top = 670.0
margin_right = 871.0
margin_bottom = 832.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 8 )
expand = true

[node name="Label2" type="Label" parent="connect/VBoxContainer/join"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 6 )
text = "Join"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="players" type="ColorRect" parent="."]
visible = false
anchor_left = 0.976
anchor_top = 0.353
anchor_right = 0.976
anchor_bottom = 0.66
margin_left = -881.0
margin_top = -255.5
margin_bottom = 255.5
color = Color( 0.470588, 0.470588, 0.470588, 0.223529 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="players"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = -5.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="name_label" type="Label" parent="players/VBoxContainer"]
margin_right = 871.0
margin_bottom = 33.0
size_flags_horizontal = 3
size_flags_vertical = 0
custom_fonts/font = ExtResource( 7 )
text = "Name:"

[node name="list" type="ItemList" parent="players/VBoxContainer"]
margin_top = 37.0
margin_right = 871.0
margin_bottom = 423.0
rect_min_size = Vector2( 0, 166.64 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="error_label" type="Label" parent="players/VBoxContainer"]
margin_top = 427.0
margin_right = 871.0
margin_bottom = 441.0
size_flags_horizontal = 3
size_flags_vertical = 0
custom_colors/font_color = Color( 0.820312, 0.291595, 0.291595, 1 )
align = 1

[node name="start" type="TextureButton" parent="players/VBoxContainer"]
self_modulate = Color( 1, 0.631373, 0, 0.243137 )
margin_top = 445.0
margin_right = 871.0
margin_bottom = 832.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 8 )
expand = true

[node name="Label2" type="Label" parent="players/VBoxContainer/start"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 6 )
text = "START"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="error" type="AcceptDialog" parent="."]
margin_right = 55.0
margin_bottom = 58.0
mouse_filter = 1
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
autoplay = true
script = ExtResource( 17 )

[node name="info_button" type="TextureButton" parent="."]
self_modulate = Color( 0.984314, 0.784314, 0.00392157, 1 )
anchor_left = 0.043
anchor_top = 1.0
anchor_right = 0.043
anchor_bottom = 1.0
margin_top = -200.005
margin_right = 200.0
rect_scale = Vector2( 0.556974, 0.556974 )
mouse_filter = 1
texture_normal = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="gear_button" parent="." instance=ExtResource( 9 )]
modulate = Color( 0.984314, 0.784314, 0.00392157, 1 )
margin_left = 224.0
margin_top = 882.0
margin_right = -1877.0
margin_bottom = -87.0

[node name="settings_pane" parent="." instance=ExtResource( 16 )]
visible = false
mouse_filter = 1

[node name="info_pane" parent="." instance=ExtResource( 12 )]
visible = false
mouse_filter = 1
[connection signal="pressed" from="connect/VBoxContainer/host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="connect/VBoxContainer/join" to="." method="_on_join_pressed"]
[connection signal="pressed" from="players/VBoxContainer/start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="info_button" to="." method="_on_info_button_pressed"]
